# gig-finder-rust-axum

./: .env.example  Cargo.toml  FRONT_FACING_IDEAS.md  POST_FLIGHT_REPORT.md  README.md  docker-compose.yml  justfile  sources.yaml
.github/workflows/: ci.yml
.prompts/: PROMPT_00_s.txt  PROMPT_01.txt  PROMPT_02.txt  PROMPT_03.txt  PROMPT_04.txt  PROMPT_05.txt  PROMPT_06.txt  PROMPT_07.txt  PROMPT_08.txt  PROMPT_09.txt  PROMPT_10.txt  improvements-before-finalization.txt  improvements-before-initial-run.txt
assets/static/: app.css
assets/tailwind/: tailwind.config.js
crates/rhof-adapters/: Cargo.toml
crates/rhof-adapters/src/: lib.rs
crates/rhof-adapters/tests/: sample-source_snapshot.rs
crates/rhof-cli/: Cargo.toml
crates/rhof-cli/src/: main.rs
crates/rhof-core/: Cargo.toml
crates/rhof-core/src/: lib.rs
crates/rhof-storage/: Cargo.toml
crates/rhof-storage/src/: lib.rs
crates/rhof-sync/: Cargo.toml
crates/rhof-sync/src/: lib.rs
crates/rhof-web/: Cargo.toml
crates/rhof-web/src/: lib.rs
crates/rhof-web/templates/: index.html  opportunities.html  opportunities_facets_partial.html  opportunities_table_partial.html  opportunity_detail.html  reports.html  review.html  review_resolve_partial.html  sources.html
docs/: ADAPTER_CHECKLIST.md  ARCHITECTURE.md  DATA_MODEL.md  RUNBOOK.md  SOURCES.md
fixtures/appen-crowdgen/sample/: bundle.json  snapshot.json
fixtures/appen-crowdgen/sample/raw/: listing.html
fixtures/clickworker/sample/: bundle.json  snapshot.json
fixtures/clickworker/sample/raw/: listing.html
fixtures/oneforma-jobs/sample/: bundle.json  snapshot.json
fixtures/oneforma-jobs/sample/raw/: listing.html
fixtures/prolific/sample/: bundle.json  snapshot.json
fixtures/sample-source/sample/: bundle.json
fixtures/sample-source/sample/raw/: listing.html
fixtures/telus-ai-community/sample/: bundle.json  snapshot.json
fixtures/telus-ai-community/sample/raw/: listing.html
manual/prolific/raw/: study.json
migrations/: 20260223210000_init_schema.down.sql  20260223210000_init_schema.up.sql
reports/0da1d42f-857c-4d16-8559-abf5f73a81b0/: daily_brief.md  opportunities_delta.json
reports/0da1d42f-857c-4d16-8559-abf5f73a81b0/snapshots/: opportunities.parquet
reports/527206e8-38c4-4f46-a4b4-39e0e1c26092/: daily_brief.md  opportunities_delta.json
reports/76cbf65f-94d7-43b6-9043-468f31f706d5/: daily_brief.md  opportunities_delta.json
reports/77605a29-8476-4d56-ba95-0b2966744b77/: daily_brief.md  opportunities_delta.json
reports/77605a29-8476-4d56-ba95-0b2966744b77/snapshots/: tags.parquet
reports/817496c3-f2ea-436d-858a-f519bdf9bc7e/: daily_brief.md  opportunities_delta.json
reports/817496c3-f2ea-436d-858a-f519bdf9bc7e/snapshots/: manifest.json  opportunity_versions.parquet  sources.parquet
reports/8e2ddde8-e9e5-44e3-bafc-44eae3302f5d/: daily_brief.md  opportunities_delta.json
reports/ce348a3d-68d2-4adc-b8d8-c98556cf8c04/: daily_brief.md  opportunities_delta.json
rules/: pay.yaml  risk.yaml  tags.yaml
scripts/: check_adapters.py  install-tailwind.sh
templates/adapter/: adapter.rs.tmpl  adapter_test.rs.tmpl  bundle.json.tmpl  raw_listing.html.tmpl
