[workspace]
members = [
  "crates/rhof-core",
  "crates/rhof-storage",
  "crates/rhof-adapters",
  "crates/rhof-sync",
  "crates/rhof-web",
  "crates/rhof-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.metadata.rhof]
name = "Remote Hourly Opportunity Finder"
