[package]
name = "rhof-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rhof-core = { path = "../rhof-core" }
rhof-storage = { path = "../rhof-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v5"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
