[package]
name = "rhof-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rhof-core = { path = "../rhof-core" }
rhof-adapters = { path = "../rhof-adapters" }
rhof-storage = { path = "../rhof-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
strsim = "0.11"
tokio = { version = "1", features = ["fs", "time"] }
tokio-cron-scheduler = "0.13"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
