[package]
name = "rhof-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
arrow-array = "54"
arrow-schema = "54"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
parquet = { version = "54", features = ["arrow"] }
rhof-core = { path = "../rhof-core" }
rhof-adapters = { path = "../rhof-adapters" }
rhof-storage = { path = "../rhof-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "macros"] }
strsim = "0.11"
tokio = { version = "1", features = ["fs", "time", "signal"] }
tokio-cron-scheduler = "0.13"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
