[package]
name = "rhof-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
askama = "0.12"
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
tokio = { version = "1", features = ["fs", "net", "rt-multi-thread"] }
rhof-sync = { path = "../rhof-sync" }
rhof-core = { path = "../rhof-core" }
rhof-storage = { path = "../rhof-storage" }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
